# space

./: .gitignore  CMakeLists.txt  compile_commands.json  imgui.ini  justfile  vcpkg.json
shaders/: advanced_fragment.glsl  basic_fragment.glsl  fragment.glsl  vertex.glsl  wireframe_fragment.glsl
src/: buffer.cpp  buffer.h  entity.cpp  entity.h  input.cpp  input.h  light.cpp  light.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  obj.cpp  obj.h  primatives.cpp  primatives.h  primitives.cpp  primitives.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h  space.cpp  space.h  texture.cpp  texture.h  transform.cpp  transform.h  ui.cpp  ui.h  utils.cpp  utils.h
src/resource_handler/: file.cpp  file.h  obj.cpp  obj.h
